# csemx

./: .gitignore  LICENSE  README.md  csemx-rationale.md  csemx-specification.md  requirements-validation.txt
.github/workflows/: pages.yml
examples/: README.md
examples/airborne_hem.csemx/: data.csv  manifest.yaml  notes.md  rx.csv  rx_vertices.csv  tx.csv  tx_vertices.csv
examples/example.csemx/: data.csv  manifest.yaml  notes.md  rx_vertices.csv
examples/example_mixed_parquet.csemx/: data.parquet  manifest.yaml  notes.md  rx.csv  tx.csv  tx_vertices.csv
examples/land_dipole_dipole.csemx/: data.csv  manifest.yaml  notes.md  rx.csv  rx_vertices.csv  tx.csv  tx_vertices.csv
examples/seafloor_vector.csemx/: data.csv  manifest.yaml  notes.md  rx.csv  rx_vertices.csv  tx.csv  tx_vertices.csv
matlab/: README.md
matlab/+csemx/: read.m  validate.m  write.m
matlab/+csemx/private/: absolutePath.m  csemxStringColumns.m  readTable.m  repoRoot.m  resolveBundleRoot.m  tablePath.m  writeTable.m  writeText.m
python/: README.md  pyproject.toml  setup.py
python/src/csemx/: __init__.py  cli.py  io.py  validation.py
python/tests/: test_validate.py
schemas/: csemx-validator-metadata.json  manifest.schema.json
tools/: check_examples.sh  validate_csemx.py
web/: Gemfile  _config.yml  index.html
web/_includes/: footer.html  head.html  header.html
web/_layouts/: default.html  home.html
web/assets/css/: style.css
